--- a/index.html
+++ b/index.html
@@ -24,6 +24,67 @@
         <img src="resources/New Year Photo.png" alt="">
     </div>
 </section>
+
+<section class="midnight-party">
+<div>
+    <h1 id="midnight-party-title">Welcome to midnight party</h1>
+
+ <p id="midnight-party-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+ <button>Join Now</button>
+ </div>
+
+ <div>
+    <img src="resources/Group 70.png" alt="">
+ </div>
+</section>
+
+<section class="address">
+    <p><b><span id="red">Place:</span></b> New Park Hotel</p>
+    <p><span id="red">Date:</span> 31 December Night 2023</p>
+    <p><span id="red">Time:</span> Evening 7.30 pm to 12.30 am</p>
+    <br>
+    <button id="join-now-btn">Join Now</button>
+</section>
+
+<section class="offers">
+    <div>
+        <h3 id="red">NEW BEST OFFER</h3>
+        <h1>Coming Soon</h1>
+        <p>Dolor sit amet consectetur Consequat <br> eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+    </div>
+
+    <div class="happy-people-pic">
+        <img src="resources/Ellipse 1.png" alt="">
+    </div>
+
+    <div class="2024">
+
+        <h1 id="red"><strong>2024</strong>
+        </h1>
+        <p>Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
+        <img src="resources/Group 96.png" alt="">
+
+    </div>
+</section>
+
+<section class="holidays-offers">
+    <div id="title-part">
+        <h4>WHAT IS FUNCTIONAL</h4>
+        <h1 id="fifty-parcnt-offers"><span id="red">Holidays</span>Sale 50%</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</p>
+    </div>
+
+    <div>
+        <img src="resources/Group 75.png" alt="">
+        <img src="resources/Group 44.png" alt="">
+        <img src="resources/Rectangle 1.png" alt="">
+    </div>
+    <div>
+        <img src="resources/Rectangle 2.png" alt="">
+    </div>
+</section>
     </main>
     
     <footer>
