--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@
         <img src="resources/Rectangle 2.png" alt="">
     </div>
 </section>
+
+<section class="portfolio">
+
+    <div>
+        <h3 id="red">THE BEST GIFTS</h3>
+        <h1 id="portfolio-heading">Our Awesome Portfolio</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>  Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+    </div>
+
+    <div>
+        <img src="resources/Rectangle 3.png" alt="">
+        <img src="resources/Rectangle 4.png" alt="">
+        <img src="resources/Rectangle 5.png" alt="">
+        
+    </div>
+
+    <div>
+        <img src="resources/Rectangle 6.png" alt="">
+        <img src="resources/Rectangle 7.png" alt="">
+        <img src="resources/Rectangle 8.png" alt="">
+    </div>
+
+</section>
     </main>
     
     <footer>
