--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
     </div>
 
 </section>
+
+<section class="subscribe">
+    <img src="resources/Group 61.png" alt="">
+
+    <div>
+        <h1 id="subscribe-heading">Subscribe Newsletter</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+    </div>
+
+    <div>
+        <input type="email" name="" id="email" placeholder="user@gmail.com">
+        <button id="subscribe">Subscribe</button>
+    </div>
+</section>
     </main>
     
     <footer>
